fix sell_time and purchase_time cell on smaller resolution (#3637)

--- a/packages/trader/src/sass/app/modules/reports.scss
+++ b/packages/trader/src/sass/app/modules/reports.scss
@@ -468,6 +468,7 @@ $side-padding: 1.2em;
     .sell_time,
     .purchase_time {
         text-align: left;
+        min-width: 120px;
     }
     .profit_loss {
         font-weight: bold;
